remove the inline styles

--- a/html-css/week1/index.html
+++ b/html-css/week1/index.html
@@ -9,17 +9,17 @@
         <div class="contact-information">
             <h1>Mariem Oueslati</h1>
             <div class="profile-picture"></div>
-            <h1>Contact:</h1>
+            <h2>Contact:</h2>
             <h3>Nationality: Tunisian</h3>
             <h3>Gender: Female</h3>
-            <div class="information-item" style="color:blue"><i class="fa fa-map-marker" aria-hidden="true"></i> Vejlesøparken 1-424 2840  Holte, Denmark</div>
-            <div class="information-item" style="color: blue;"><i class="fa fa-envelope-o" aria-hidden="true"></i>mariem.oueslati.hajjem@gmail.com</div>
-            <div class="information-item" style="color: blue;"><i class="fa fa-phone" aria-hidden="true"></i> (+45)27582603</div>
+            <div class="information-item"><i class="fa fa-map-marker" aria-hidden="true"></i> Vejlesøparken 1-424 2840  Holte, Denmark</div>
+            <div class="information-item"><i class="fa fa-envelope-o" aria-hidden="true"></i>mariem.oueslati.hajjem@gmail.com</div>
+            <div class="information-item"><i class="fa fa-phone" aria-hidden="true"></i> (+45)27582603</div>
         </div>
 
         <div class="cv-information">
             <section>
-                <h1 >Summary</h1>
+                <h2 >Summary</h2>
                 <p>I'm a bachelor degree graduated civil engineering student, looking to switch career into an amazing software developer.
                     I recently finished the "Intro to Programming Nanodegree Program"
                     from Udacity (HTML, CSS, JavaScript and Python), and introduction to JavaScript course at Redi School of Digital Integration.
@@ -29,7 +29,7 @@
 
             <section>
                 <div>
-                    <h1>Work Experience</h1>
+                    <h2>Work Experience</h2>
                     <h2 class="date">01/02/2020 – 27/06/2020 – Siliana, Tunisia</h2>
                     <h3>Civil engineering (End of studies internship) </h3>
                     <p> Ministry of Equipment, Housing and Territorial Development
